<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".ErrorActivity">


    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/no_internet"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error"
        android:layout_above="@+id/title1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:layout_below="@+id/title1"
        android:textColor="@color/white"
        android:text="@string/no_internet_connection"/>

    <TextView
        android:id="@+id/title3"
        android:layout_below="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/please_check_your_connection"/>

    <Button
        android:onClick="TryAgain"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/title3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:text="@string/try_again" />

</RelativeLayout>