<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".Attendance">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/currentTime">
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/your_location"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_location" />

        <Button
            android:id="@+id/tryagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center_vertical"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/refresh" />
    </LinearLayout>

    <TextView
        android:id="@+id/currentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_above="@+id/checkin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="08:00 AM"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ball"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@android:color/white"
        android:indeterminate="false"
        android:progressDrawable="@drawable/ring" />

    <Button
        android:id="@+id/checkin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ring"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/check_in"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_box"
        android:padding="10dp"
        android:layout_below="@+id/checkin"
        android:inputType="text|textMultiLine"
        android:hint="@string/your_about_to_late_please_leave_a_note"
        android:gravity="top"/>



</RelativeLayout>